# photochem

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  compile.sh  particle_plan.md  plan.md  pyproject.toml  random.ipynb  settings.yaml  settings_Hadean.yaml  settings_titan.yaml  setup.py  test.py  test.yaml  zahnle.yaml  zahnle_earth.yaml  zahnle_rx.yaml  zahnle_titan.yaml
.github/workflows/: cmake.yaml  test.yaml
Photochem/: Atmosphere.pyx  CMakeLists.txt  FormatReactions.py  Photochem.h  Photochem.py  PhotochemData.pyx  PhotochemVars_wrapper.f90  Photochem_OLD.py  _Photochem.pyx  __init__.py  atmos_wrapper.f90  atmosphere_wrapper.f90  io.py  utils.py
Photochem/cython/: Atmosphere.pyx  AtomConservation.pyx  CMakeLists.txt  PhotochemData.pyx  PhotochemVars.pyx  PhotochemWrk.pyx  ProductionLoss.pyx  _Photochem.pyx
Photochem/data/misc/: saturation_data.yaml  scrapping_NIST.ipynb
Photochem/data/reaction_mechanisms/: README.md  zahnle_earth.yaml
Photochem/data/xsections/C4H4/: C4H4_+_hv_=_C4H2_+_H2.txt
Photochem/data/xsections/CH3CHO/: CH3CHO_xs.txt
Photochem/data/xsections/CO/: CO_xs.txt
Photochem/data/xsections/CO2/: CO2_+_hv_=_CO_+_O.txt
Photochem/data/xsections/CS2/: CS2_+_hv_=_CS_+_S.txt
Photochem/data/xsections/Cl2/: Cl2_xs.txt
Photochem/data/xsections/H2CO/: H2CO_xs.txt
Photochem/data/xsections/H2O2/: H2O2_xs.txt
Photochem/data/xsections/H2S/: H2S_xs.txt
Photochem/data/xsections/HCN/: HCN_xs.txt
Photochem/data/xsections/HO2NO2/: HO2NO2_xs.txt
Photochem/data/xsections/N2O/: N2O_xs.txt
Photochem/data/xsections/NO3/: NO3_+_hv_=_NO2_+_O.txt
Photochem/fortran/: Atmosphere_wrapper.f90  AtomConservation_wrapper.f90  CMakeLists.txt  PhotochemData_wrapper.f90  PhotochemVars_wrapper.f90  PhotochemWrk_wrapper.f90  ProductionLoss_wrapper.f90  wrapper_utils.f90
Photochem/utils/: __init__.py  _convert_atmos.py  _convert_cantera.py  _convert_utils.py  _convert_vulcan.py  _format.py
cpp/: ThermoData.cpp  config.yaml  photochem_io.cpp  test.cpp
cpp/VofS/: test.cpp
cpp/twostream/: linalg.cpp  linalg.h  main.cpp  twostream.cpp
data/aerosol_xsections/: aerosol_xsections.ipynb  notes.md
data/henry/: HbpSI.f90  README.md  Untitled.ipynb  henry.yaml
data/misc/: H2SO4.txt  saturation_data.yaml  scrapping_NIST.ipynb
data/rayleigh/: README.md  rayleigh.md
data/reaction_mechanisms/: README.md  zahnle_earth.yaml  zahnle_earth_dum.yaml  zahnle_titan.yaml
data/xsections/: H2O_Ranjan(2020)_292K_192.057-230.413nm(extrapolated).txt  README.md  Untitled.ipynb  check_consistency.py  metadata.yaml  missing.md  notes.md  photo_species_to_check.yaml  rayleigh.yaml  xs_metadata.yaml  xs_tools.py  xsection_comparisons.ipynb
data/xsections_titan/: README.md  xs_tools.py
docs/: mkdocs.yml
examples/: GasGiants.ipynb  Tutorial.ipynb  Tutorial_AdiabatClimate.ipynb  comparison2observations.ipynb  convert_to_Cantera.ipynb  using_Atmos_reactions.ipynb  using_VULCAN_reactions.ipynb
old/: old_input_subs.f90
photochem/: __init__.py  clima.py  equilibrate.py  io.py
photochem/cython/: Atmosphere.pyx  Atmosphere_pxd.pxd  AtomConservation.pyx  AtomConservation_pxd.pxd  CMakeLists.txt  EvoAtmosphere.pyx  EvoAtmosphere_pxd.pxd  PhotochemData.pyx  PhotochemData_pxd.pxd  PhotochemVars.pyx  PhotochemVars_pxd.pxd  PhotochemWrk.h  PhotochemWrk.pyx  PhotochemWrk_pxd.pxd  ProductionLoss.pyx  ProductionLoss_pxd.pxd  _photochem.pyx
src/: .f2py_f2cmap  CMakeLists.txt  Untitled.ipynb  atmos.f90  compile_jl.sh  debugging.f90  main.f90  makefile  photochem.f90  photochem_atmosphere.f90  photochem_atmosphere_init.f90  photochem_common.f90  photochem_const.f90  photochem_data.f90  photochem_enum.f90  photochem_eqns.f90  photochem_input.f90  photochem_io.f90  photochem_mie.f90  photochem_object.f90  photochem_object_init.f90  photochem_object_integrate.f90  photochem_object_rhs.f90  photochem_radtran.f90  photochem_rainout.f90  photochem_setup.f90  photochem_types.f90  photochem_types_create.f90  photochem_vars.f90  photochem_version.f90.in  photochem_wrk.f90  pseudo_transient.f90  rates.f90  right_hand_side.f90  test.cpp  test.f90  test.run  test_mie.f90  test_yaml.f90
src/atmosphere/: photochem_atmosphere.f90  photochem_atmosphere_init.f90  photochem_atmosphere_integrate.f90  photochem_atmosphere_rhs.f90  photochem_atmosphere_utils.f90
src/binning/: CMakeLists.txt  binning.f90  interp.f90
src/cminpack/: CMakeLists.txt  cminpack_wrapper.c  test_wrapper.f90
src/dependencies/: CMakeLists.txt  clean.sh  compile.sh
src/dependencies/binning/: CMakeLists.txt  README.md  linear_interpolation_module.f90  sorting.f90
src/dependencies/cminpack/: cminpack_wrapper.f90
src/dependencies/cminpack/examples/: CMakeLists.txt
src/dependencies/fortran-yaml-cpp/: README.md  test.yaml  test_yaml.f90  yaml.cpp
src/dependencies/futils/: CMakeLists.txt  binning.f  futils.f90  sorting.f90
src/evoatmosphere/: photochem_evoatmosphere.f90  photochem_evoatmosphere_init.f90  photochem_evoatmosphere_integrate.f90  photochem_evoatmosphere_rhs.f90  photochem_evoatmosphere_rhs_climate.f90  photochem_evoatmosphere_utils.f90
src/fortran-yaml-cpp/: CMakeLists.txt  example.f90  yaml.f90
src/input/: photochem_input.f90  photochem_input_after_read.f90  photochem_input_read.f90
src/minpack/: CMakeLists.txt
src/old/: arkode.f90
src/old/cpp/: Atmosphere.cpp  photochem_io.cpp  plan.md  yamltest.cpp
src/old/cpp/VofS/: test1.cpp
src/old/cpp/twostream/: twostream.cpp  twostream.h
src/old/two_stream/: .f2py_f2cmap  Untitled.ipynb  main.f90  tau.txt  test.sh  two_stream.f90
src/test.run.dSYM/Contents/: Info.plist
src/test.run.dSYM/Contents/Resources/DWARF/: test.run
src/thermo/: photochem_thermo.f90
templates/: atmosphere_nothing.txt
tests/: CMakeLists.txt  memtest.f90  memtest_evo.f90  no_particle_test.yaml  test.f90  test.py  test_settings1.yaml  testevo.f90  testevo.py  testevo_settings.yaml  testevo_settings1.yaml  testevo_settings2.yaml  testrun.f90  tmp.txt
two_stream/: Untitled.ipynb  two_stream.f90  twostr_photo.f90
(+273 files in other folders)
